--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=0.3, width=device-width">
   <link rel="stylesheet" href="/build/styles.css">
+  <link rel="stylesheet" href="/build/fonts.css">
 </head>
 
 <body>
 <div id="root">Загрузка...</div>
 <script src="/build/script.js"></script>
+
 </body>
 
 </html>
