--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <base href="/">
-  <title>React Movies</title>
+  <title>Inferno movies app</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=0.3, width=device-width">
   <link rel="stylesheet" href="/build/styles.css">
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div id="root">Загрузка...</div>
+<div id="root"></div>
 <script src="/build/script.js"></script>
 
 </body>
